# serde-pgrow

./: Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
examples/: playground.rs
src/: de_error.rs  lib.rs  pg.rs  pg_row_ext.rs
src/de/: de_col.rs  de_col_deserializer.rs  de_error.rs  de_field_name.rs  de_js_value.rs  de_js_value_deserializer.rs  de_row.rs  de_row_deserializer.rs  de_row_map.rs  de_row_map_ma.rs  de_row_struct.rs  de_row_struct_ma.rs  de_row_tuple.rs  de_row_tuple_sa.rs  de_seq.rs  de_seq_of_pg_any_opt.rs  de_seq_of_pg_any_opt_sa.rs  de_seq_sa.rs  field_name.rs  ma.rs  mod.rs  pg_any.rs  pg_any_deserializer.rs  pg_any_opt.rs  pg_any_opt_deserializer.rs  pg_de_error.rs  row.rs  sa.rs  util.rs  va.rs
src/v0_2/: mod.rs  pg_row_ext.rs
src/v0_2/de/: field_name.rs  ma.rs  row.rs  sa.rs  va.rs
tests/: common.rs  docker-compose.yml  t01_prim_string.rs  t02_prim_bool.rs  t03_prim_signed_integer.rs  t04_prim_unsigned_integer.rs  t05_floats.rs  t06_newtype_over_prim.rs  t07_structs_with_prim_fields.rs  t08_structs_with_struct_fields.rs  t09_tuples_and_tuple_structs.rs  t10_pg_array_as_vec.rs  t11_same_type_columns_into_hashmap.rs  t12_record_with_flatten.rs  t13_record_from_json_field.rs  test_array_agg.rs  test_array_agg.rs.bak  test_flatten.rs  test_flatten.rs.bak  test_flatten_opt.rs  test_flatten_opt.rs.bak  tests.rs  tests.rs.bak
