[package]
name = "serde-pgrow"
version = "0.3.3"
authors = ["Roman Gafiyatullin <r.gafiyatullin@me.com>"]
edition = "2018"
license-file = "LICENSE"
repository = "https://github.com/RGafiyatullin/serde-pgrow"
description = "Deserialize a serde-type from a PgRow"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio-postgres = { version = "^0.7", features = ["with-serde_json-1"] }
serde = "^1"
serde_json = "^1"
thiserror = "^1"
eyre = "^0.6"

log = { version = "^0.4", optional = true }

[features]
default = []
debug-logs = ["log"]

[dev-dependencies]
tokio = {version = "^1", features = ["full"]}
serde = {version = "^1", features = ["derive"]}
futures = {version = "^0.3"}
pretty_env_logger = "^0.4"